add postNewChat
