# src/routes/chat.routes.js
@@ -6,5 +6,6 @@ const chatController = require("../controllers/chat.controller");
 router.get("/getAll", chatController.getAllChats);
 router.get("/user/:user_id", chatController.getChatByUserId);
 router.get("/:chat_id", chatController.getChatById);
+router.post("/newChat", chatController.postNewChat)
 
 module.exports = router;
