# src/swagger/chat.swagger.yml
@@ -67,3 +67,42 @@
         404:
           description: Chat not found
 
+  /chat/newChat:
+      post:
+        summary: Create a new chat
+        requestBody:
+          required: true
+          content:
+            application/json:
+              schema:
+                type: object
+                required:
+                  - user1
+                  - user2
+                properties:
+                  user1:
+                    type: string
+                    example: 2
+                  user2:
+                    type: string
+                    example: 3
+        responses:
+          201:
+            description: Chat created successfully
+            content:
+              application/json:
+                schema:
+                  type: object
+                  properties:
+                    id:
+                      type: string
+                      example: 1
+                    user1:
+                      type: string
+                      example: 1
+                    user2:
+                      type: string
+                      example: 2
+          400:
+            description: Invalid input
+
